<resources>

    <!-- Common strings -->
    <string name="app_name">Карточки запоминалки</string>

    <!-- Main fragment strings -->
    <string name="main_add_btn">Добавить</string>
    <string name="main_start_btn">Начать тест</string>
    <string name="main_card_title">Карточка %1$d</string>

    <string name="main_popup_edit">Редактировать</string>
    <string name="main_popup_delete">Удалить</string>

    <!-- Add card activity strings -->
    <string name="add_card_toolbar_title">Добавление карточки</string>
    <string name="edit_card_toolbar_title">Редактирование карточки</string>

    <string name="add_card_title">Заголовок</string>
    <string name="add_card_question">Вопрос</string>
    <string name="add_card_answer">Ответ</string>
    <string name="add_card_save">Сохранить</string>

    <string name="add_card_title_error">Введите заголовок</string>
    <string name="add_card_question_error">Введите вопрос</string>
    <string name="add_card_answer_error">Введите ответ</string>

    <!-- Test activity strings -->
    <string name="test_toolbar_title">Тестирование</string>

    <string name="test_show_answer_button">Показать ответ</string>
    <string name="test_is_true_button">Верно</string>
    <string name="test_is_false_button">Не верно</string>

    <string name="test_result_title">Ваш результат</string>
    <string name="test_result_info">Правильных ответов: %1$s\nНеправильных ответов: %2$s\nТест пройден на %3$s%%</string>
    <string name="main_empty_text">Список карточек пуст</string>
    <string name="main_no_cards_for_test">Сначала нужно добавить карточки</string>
    <string name="menu_add">Добавить</string>
    <string name="main_add_card">Добавить карточку</string>

</resources>
